[package]

name = "lust"
version = "0.0.1"
description = "LISP interpreter implemented in Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pavel-v-chernykh/lust"
authors = [
    "Pavel Chernykh <pavel.v.chernykh@gmail.com>"
]

[lib]

name = "lust"
test = false
doctest = false
bench = false

[dependencies]

docopt = "0.6.52"
rustc-serialize = "0.3.6"
